--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
           </div>
         </div>
         <div class="col-b">
-          <img src="/assets/happy-doctor-holding-a-clipboard-with-patients.png" alt="">
+          <img src="./assets/happy-doctor-holding-a-clipboard-with-patients.png" alt="">
         </div>
         <div>
           <div>
